Fix: DATA_DIR ora punta sempre alla root del progetto
- Modificato DATA_DIR in ib/download_data.py, bbg/download_data.py e ib/utils.py
- Usa Path(__file__).parent.parent.parent per path assoluto
- I dati vengono sempre salvati in database/ alla root, indipendentemente dalla directory di esecuzione
- Creato notebook download_sx5e.ipynb per esempio download da Bloomberg

--- a/strategies/example/load_data.ipynb
+++ b/strategies/example/load_data.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -70,35 +70,35 @@
               "  white-space: pre-wrap;\n",
               "}\n",
               "</style>\n",
-              "<small>shape: (10, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>time</th><th>ticker</th><th>open</th><th>high</th><th>low</th><th>close</th><th>volume</th><th>insertion_time</th><th>type</th></tr><tr><td>date</td><td>time</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[μs]</td><td>str</td></tr></thead><tbody><tr><td>2006-02-06</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3678.87</td><td>3704.17</td><td>3672.53</td><td>null</td><td>6.75348073e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-07</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3682.97</td><td>3698.63</td><td>3656.2</td><td>null</td><td>8.8001156e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-08</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3680.05</td><td>3680.05</td><td>3637.93</td><td>null</td><td>7.77596211e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-09</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3672.34</td><td>3726.81</td><td>3672.34</td><td>null</td><td>6.85914627e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-10</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3725.18</td><td>3735.14</td><td>3692.63</td><td>null</td><td>5.92606245e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-13</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3696.09</td><td>3727.46</td><td>3684.83</td><td>null</td><td>4.66284751e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-14</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3728.16</td><td>3744.66</td><td>3707.25</td><td>null</td><td>6.2581994e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-15</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3733.97</td><td>3749.36</td><td>3720.41</td><td>null</td><td>6.43615137e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-16</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3730.82</td><td>3756.47</td><td>3730.82</td><td>null</td><td>6.28580937e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr><tr><td>2006-02-17</td><td>01:00:00</td><td>&quot;SX5E&quot;</td><td>3757.34</td><td>3777.16</td><td>3749.94</td><td>null</td><td>7.30037825e8</td><td>2026-01-30 14:50:00</td><td>&quot;eod&quot;</td></tr></tbody></table></div>"
+              "<small>shape: (10, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>time</th><th>ticker</th><th>open</th><th>high</th><th>low</th><th>close</th><th>volume</th><th>insertion_time</th><th>type</th></tr><tr><td>date</td><td>time</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[μs]</td><td>str</td></tr></thead><tbody><tr><td>2026-01-30</td><td>09:00:00</td><td>&quot;SX5E&quot;</td><td>5887.92</td><td>5896.14</td><td>5887.92</td><td>5895.18</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:01:00</td><td>&quot;SX5E&quot;</td><td>5894.59</td><td>5895.5</td><td>5894.59</td><td>5895.34</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:02:00</td><td>&quot;SX5E&quot;</td><td>5902.01</td><td>5906.52</td><td>5902.01</td><td>5906.52</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:03:00</td><td>&quot;SX5E&quot;</td><td>5904.7</td><td>5908.56</td><td>5904.4</td><td>5908.56</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:04:00</td><td>&quot;SX5E&quot;</td><td>5908.71</td><td>5909.94</td><td>5908.71</td><td>5909.17</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:05:00</td><td>&quot;SX5E&quot;</td><td>5910.29</td><td>5911.29</td><td>5909.82</td><td>5909.82</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:06:00</td><td>&quot;SX5E&quot;</td><td>5910.06</td><td>5911.02</td><td>5908.8</td><td>5908.8</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:07:00</td><td>&quot;SX5E&quot;</td><td>5909.04</td><td>5909.86</td><td>5908.12</td><td>5908.12</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:08:00</td><td>&quot;SX5E&quot;</td><td>5905.55</td><td>5905.71</td><td>5904.43</td><td>5904.43</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:09:00</td><td>&quot;SX5E&quot;</td><td>5904.3</td><td>5904.47</td><td>5902.2</td><td>5903.31</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr></tbody></table></div>"
             ],
             "text/plain": [
               "shape: (10, 10)\n",
-              "┌────────────┬──────────┬────────┬─────────┬───┬───────┬──────────────┬─────────────────────┬──────┐\n",
-              "│ date       ┆ time     ┆ ticker ┆ open    ┆ … ┆ close ┆ volume       ┆ insertion_time      ┆ type │\n",
-              "│ ---        ┆ ---      ┆ ---    ┆ ---     ┆   ┆ ---   ┆ ---          ┆ ---                 ┆ ---  │\n",
-              "│ date       ┆ time     ┆ str    ┆ f64     ┆   ┆ f64   ┆ f64          ┆ datetime[μs]        ┆ str  │\n",
-              "╞════════════╪══════════╪════════╪═════════╪═══╪═══════╪══════════════╪═════════════════════╪══════╡\n",
-              "│ 2006-02-06 ┆ 01:00:00 ┆ SX5E   ┆ 3678.87 ┆ … ┆ null  ┆ 6.75348073e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-07 ┆ 01:00:00 ┆ SX5E   ┆ 3682.97 ┆ … ┆ null  ┆ 8.8001156e8  ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-08 ┆ 01:00:00 ┆ SX5E   ┆ 3680.05 ┆ … ┆ null  ┆ 7.77596211e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-09 ┆ 01:00:00 ┆ SX5E   ┆ 3672.34 ┆ … ┆ null  ┆ 6.85914627e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-10 ┆ 01:00:00 ┆ SX5E   ┆ 3725.18 ┆ … ┆ null  ┆ 5.92606245e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-13 ┆ 01:00:00 ┆ SX5E   ┆ 3696.09 ┆ … ┆ null  ┆ 4.66284751e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-14 ┆ 01:00:00 ┆ SX5E   ┆ 3728.16 ┆ … ┆ null  ┆ 6.2581994e8  ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-15 ┆ 01:00:00 ┆ SX5E   ┆ 3733.97 ┆ … ┆ null  ┆ 6.43615137e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-16 ┆ 01:00:00 ┆ SX5E   ┆ 3730.82 ┆ … ┆ null  ┆ 6.28580937e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "│ 2006-02-17 ┆ 01:00:00 ┆ SX5E   ┆ 3757.34 ┆ … ┆ null  ┆ 7.30037825e8 ┆ 2026-01-30 14:50:00 ┆ eod  │\n",
-              "└────────────┴──────────┴────────┴─────────┴───┴───────┴──────────────┴─────────────────────┴──────┘"
+              "┌────────────┬──────────┬────────┬─────────┬───┬─────────┬────────┬─────────────────────┬──────────┐\n",
+              "│ date       ┆ time     ┆ ticker ┆ open    ┆ … ┆ close   ┆ volume ┆ insertion_time      ┆ type     │\n",
+              "│ ---        ┆ ---      ┆ ---    ┆ ---     ┆   ┆ ---     ┆ ---    ┆ ---                 ┆ ---      │\n",
+              "│ date       ┆ time     ┆ str    ┆ f64     ┆   ┆ f64     ┆ f64    ┆ datetime[μs]        ┆ str      │\n",
+              "╞════════════╪══════════╪════════╪═════════╪═══╪═════════╪════════╪═════════════════════╪══════════╡\n",
+              "│ 2026-01-30 ┆ 09:00:00 ┆ SX5E   ┆ 5887.92 ┆ … ┆ 5895.18 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:01:00 ┆ SX5E   ┆ 5894.59 ┆ … ┆ 5895.34 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:02:00 ┆ SX5E   ┆ 5902.01 ┆ … ┆ 5906.52 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:03:00 ┆ SX5E   ┆ 5904.7  ┆ … ┆ 5908.56 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:04:00 ┆ SX5E   ┆ 5908.71 ┆ … ┆ 5909.17 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:05:00 ┆ SX5E   ┆ 5910.29 ┆ … ┆ 5909.82 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:06:00 ┆ SX5E   ┆ 5910.06 ┆ … ┆ 5908.8  ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:07:00 ┆ SX5E   ┆ 5909.04 ┆ … ┆ 5908.12 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:08:00 ┆ SX5E   ┆ 5905.55 ┆ … ┆ 5904.43 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "│ 2026-01-30 ┆ 09:09:00 ┆ SX5E   ┆ 5904.3  ┆ … ┆ 5903.31 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
+              "└────────────┴──────────┴────────┴─────────┴───┴─────────┴────────┴─────────────────────┴──────────┘"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df_all.head(10)"
+        "df_intraday.head(10)"
       ]
     },
     {
