--- a/strategies/example/load_data.ipynb
+++ b/strategies/example/load_data.ipynb
@@ -11,17 +11,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
+        "import sys\n",
         "import polars as pl\n",
-        "from pathlib import Path"
+        "from pathlib import Path\n",
+        "\n",
+        "sys.path.insert(0, str(Path(\"../../\").resolve()))\n",
+        "\n",
+        "from engine.datafeed import DataFeed, MarketData"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,12 +34,84 @@
         "ticker = \"SX5E\"\n",
         "\n",
         "# Path relativo alla root del progetto (2 livelli sopra da strategies/example/)\n",
-        "data_dir = Path(\"../../database\") / ticker\n",
+        "data_dir = Path(\"../../database\") \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# PRICES_PATH = str(project_root / 'data')\n",
+        "universe = ['SX5E']\n",
+        "start_date='2025-01-01'\n",
+        "end_date='2025-12-31'\n",
         "\n",
-        "# Carica tutti i file parquet\n",
-        "parquet_files = sorted(data_dir.glob(\"*.parquet\"))\n",
-        "dfs = [pl.read_parquet(f) for f in parquet_files]\n",
-        "df_all = pl.concat(dfs)"
+        "# cfg = Config(universe=universe, start_date=start_date, end_date=end_date, frequency=\"eod\")\n",
+        "feed = DataFeed(prices_base=data_dir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# DataFeed DataFrame"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shape: (256, 10)\n",
+            "\n",
+            "Prime righe:\n",
+            "shape: (5, 10)\n",
+            "┌────────────┬──────────┬────────┬─────────┬───┬───────┬──────────────┬─────────────────────┬──────┐\n",
+            "│ date       ┆ time     ┆ ticker ┆ open    ┆ … ┆ close ┆ volume       ┆ insertion_time      ┆ type │\n",
+            "│ ---        ┆ ---      ┆ ---    ┆ ---     ┆   ┆ ---   ┆ ---          ┆ ---                 ┆ ---  │\n",
+            "│ date       ┆ time     ┆ str    ┆ f64     ┆   ┆ f64   ┆ f64          ┆ datetime[μs]        ┆ str  │\n",
+            "╞════════════╪══════════╪════════╪═════════╪═══╪═══════╪══════════════╪═════════════════════╪══════╡\n",
+            "│ 2025-01-02 ┆ 01:00:00 ┆ SX5E   ┆ 4890.54 ┆ … ┆ null  ┆ 2.386088e8   ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
+            "│ 2025-01-03 ┆ 01:00:00 ┆ SX5E   ┆ 4915.54 ┆ … ┆ null  ┆ 2.06090877e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
+            "│ 2025-01-06 ┆ 01:00:00 ┆ SX5E   ┆ 4893.32 ┆ … ┆ null  ┆ 2.62450529e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
+            "│ 2025-01-07 ┆ 01:00:00 ┆ SX5E   ┆ 4987.38 ┆ … ┆ null  ┆ 2.71873242e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
+            "│ 2025-01-08 ┆ 01:00:00 ┆ SX5E   ┆ 5013.34 ┆ … ┆ null  ┆ 2.57844275e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
+            "└────────────┴──────────┴────────┴─────────┴───┴───────┴──────────────┴─────────────────────┴──────┘\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Carica i dati di mercato usando DataFeed\n",
+        "df = feed.get_market_data(start_date, end_date, 'eod', universe)\n",
+        "print(f\"Shape: {df.shape}\")\n",
+        "print(f\"\\nPrime righe:\")\n",
+        "print(df.head())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'c:\\\\dev\\\\quanto\\\\strategies\\\\example\\\\SX5E_2025-01-01_2025-12-31_1m.xlsx'"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "feed.get_data_excel(start_date, end_date, '1m', universe)"
       ]
     },
     {
@@ -42,63 +119,40 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [],
       "source": [
-        "# Separa EOD e intraday\n",
-        "df_eod = df_all.filter(pl.col(\"type\") == \"eod\")\n",
-        "df_intraday = df_all.filter(pl.col(\"type\") == \"intraday\")"
+        "a"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div><style>\n",
-              ".dataframe > thead > tr,\n",
-              ".dataframe > tbody > tr {\n",
-              "  text-align: right;\n",
-              "  white-space: pre-wrap;\n",
-              "}\n",
-              "</style>\n",
-              "<small>shape: (10, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>time</th><th>ticker</th><th>open</th><th>high</th><th>low</th><th>close</th><th>volume</th><th>insertion_time</th><th>type</th></tr><tr><td>date</td><td>time</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[μs]</td><td>str</td></tr></thead><tbody><tr><td>2026-01-30</td><td>09:00:00</td><td>&quot;SX5E&quot;</td><td>5887.92</td><td>5896.14</td><td>5887.92</td><td>5895.18</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:01:00</td><td>&quot;SX5E&quot;</td><td>5894.59</td><td>5895.5</td><td>5894.59</td><td>5895.34</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:02:00</td><td>&quot;SX5E&quot;</td><td>5902.01</td><td>5906.52</td><td>5902.01</td><td>5906.52</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:03:00</td><td>&quot;SX5E&quot;</td><td>5904.7</td><td>5908.56</td><td>5904.4</td><td>5908.56</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:04:00</td><td>&quot;SX5E&quot;</td><td>5908.71</td><td>5909.94</td><td>5908.71</td><td>5909.17</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:05:00</td><td>&quot;SX5E&quot;</td><td>5910.29</td><td>5911.29</td><td>5909.82</td><td>5909.82</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:06:00</td><td>&quot;SX5E&quot;</td><td>5910.06</td><td>5911.02</td><td>5908.8</td><td>5908.8</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:07:00</td><td>&quot;SX5E&quot;</td><td>5909.04</td><td>5909.86</td><td>5908.12</td><td>5908.12</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:08:00</td><td>&quot;SX5E&quot;</td><td>5905.55</td><td>5905.71</td><td>5904.43</td><td>5904.43</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr><tr><td>2026-01-30</td><td>09:09:00</td><td>&quot;SX5E&quot;</td><td>5904.3</td><td>5904.47</td><td>5902.2</td><td>5903.31</td><td>0.0</td><td>2026-01-30 15:33:00</td><td>&quot;intraday&quot;</td></tr></tbody></table></div>"
-            ],
-            "text/plain": [
-              "shape: (10, 10)\n",
-              "┌────────────┬──────────┬────────┬─────────┬───┬─────────┬────────┬─────────────────────┬──────────┐\n",
-              "│ date       ┆ time     ┆ ticker ┆ open    ┆ … ┆ close   ┆ volume ┆ insertion_time      ┆ type     │\n",
-              "│ ---        ┆ ---      ┆ ---    ┆ ---     ┆   ┆ ---     ┆ ---    ┆ ---                 ┆ ---      │\n",
-              "│ date       ┆ time     ┆ str    ┆ f64     ┆   ┆ f64     ┆ f64    ┆ datetime[μs]        ┆ str      │\n",
-              "╞════════════╪══════════╪════════╪═════════╪═══╪═════════╪════════╪═════════════════════╪══════════╡\n",
-              "│ 2026-01-30 ┆ 09:00:00 ┆ SX5E   ┆ 5887.92 ┆ … ┆ 5895.18 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:01:00 ┆ SX5E   ┆ 5894.59 ┆ … ┆ 5895.34 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:02:00 ┆ SX5E   ┆ 5902.01 ┆ … ┆ 5906.52 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:03:00 ┆ SX5E   ┆ 5904.7  ┆ … ┆ 5908.56 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:04:00 ┆ SX5E   ┆ 5908.71 ┆ … ┆ 5909.17 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:05:00 ┆ SX5E   ┆ 5910.29 ┆ … ┆ 5909.82 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:06:00 ┆ SX5E   ┆ 5910.06 ┆ … ┆ 5908.8  ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:07:00 ┆ SX5E   ┆ 5909.04 ┆ … ┆ 5908.12 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:08:00 ┆ SX5E   ┆ 5905.55 ┆ … ┆ 5904.43 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "│ 2026-01-30 ┆ 09:09:00 ┆ SX5E   ┆ 5904.3  ┆ … ┆ 5903.31 ┆ 0.0    ┆ 2026-01-30 15:33:00 ┆ intraday │\n",
-              "└────────────┴──────────┴────────┴─────────┴───┴─────────┴────────┴─────────────────────┴──────────┘"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df_intraday.head(10)"
+        "# Crea MarketData dal DataFrame storico\n",
+        "market_data = MarketData.from_dataframe(df)\n",
+        "print(f\"MarketData creato con {len(market_data.symbols())} simboli\")\n",
+        "print(f\"Current date: {market_data.current_date()}\")\n",
+        "print(f\"Current time: {market_data.current_time()}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Esempi di accesso ai prezzi\n",
+        "print(\"Prezzo corrente:\")\n",
+        "print(f\"  SX5E close: ${market_data.price('SX5E', 'close'):.2f}\")\n",
+        "\n",
+        "print(\"\\nPrezzo T-1 (1 bar fa):\")\n",
+        "print(f\"  SX5E close: ${market_data.price('SX5E', 'close', 1):.2f}\")\n",
+        "\n",
+        "print(\"\\nUltimi 10 prezzi:\")\n",
+        "last_10 = market_data.price('SX5E', 'close', slice(0, 10))\n",
+        "print(f\"  Shape: {len(last_10)} valori\")\n",
+        "print(f\"  Ultimi 3: {last_10[-3:].to_list()}\")\n"
       ]
     },
     {
