--- a/strategies/example/load_data.ipynb
+++ b/strategies/example/load_data.ipynb
@@ -72,17 +72,22 @@
             "\n",
             "Prime righe:\n",
             "shape: (5, 10)\n",
-            "┌────────────┬──────────┬────────┬─────────┬───┬───────┬──────────────┬─────────────────────┬──────┐\n",
-            "│ date       ┆ time     ┆ ticker ┆ open    ┆ … ┆ close ┆ volume       ┆ insertion_time      ┆ type │\n",
-            "│ ---        ┆ ---      ┆ ---    ┆ ---     ┆   ┆ ---   ┆ ---          ┆ ---                 ┆ ---  │\n",
-            "│ date       ┆ time     ┆ str    ┆ f64     ┆   ┆ f64   ┆ f64          ┆ datetime[μs]        ┆ str  │\n",
-            "╞════════════╪══════════╪════════╪═════════╪═══╪═══════╪══════════════╪═════════════════════╪══════╡\n",
-            "│ 2025-01-02 ┆ 01:00:00 ┆ SX5E   ┆ 4890.54 ┆ … ┆ null  ┆ 2.386088e8   ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
-            "│ 2025-01-03 ┆ 01:00:00 ┆ SX5E   ┆ 4915.54 ┆ … ┆ null  ┆ 2.06090877e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
-            "│ 2025-01-06 ┆ 01:00:00 ┆ SX5E   ┆ 4893.32 ┆ … ┆ null  ┆ 2.62450529e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
-            "│ 2025-01-07 ┆ 01:00:00 ┆ SX5E   ┆ 4987.38 ┆ … ┆ null  ┆ 2.71873242e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
-            "│ 2025-01-08 ┆ 01:00:00 ┆ SX5E   ┆ 5013.34 ┆ … ┆ null  ┆ 2.57844275e8 ┆ 2026-01-30 15:32:00 ┆ eod  │\n",
-            "└────────────┴──────────┴────────┴─────────┴───┴───────┴──────────────┴─────────────────────┴──────┘\n"
+            "┌────────────┬──────────┬────────┬─────────┬───┬─────────┬──────────────┬────────────────┬──────┐\n",
+            "│ date       ┆ time     ┆ ticker ┆ open    ┆ … ┆ close   ┆ volume       ┆ insertion_time ┆ type │\n",
+            "│ ---        ┆ ---      ┆ ---    ┆ ---     ┆   ┆ ---     ┆ ---          ┆ ---            ┆ ---  │\n",
+            "│ date       ┆ time     ┆ str    ┆ f64     ┆   ┆ f64     ┆ f64          ┆ datetime[μs]   ┆ str  │\n",
+            "╞════════════╪══════════╪════════╪═════════╪═══╪═════════╪══════════════╪════════════════╪══════╡\n",
+            "│ 2025-01-02 ┆ 01:00:00 ┆ SX5E   ┆ 4890.54 ┆ … ┆ 4917.88 ┆ 2.386088e8   ┆ 2026-02-03     ┆ eod  │\n",
+            "│            ┆          ┆        ┆         ┆   ┆         ┆              ┆ 14:19:00       ┆      │\n",
+            "│ 2025-01-03 ┆ 01:00:00 ┆ SX5E   ┆ 4915.54 ┆ … ┆ 4871.45 ┆ 2.06090877e8 ┆ 2026-02-03     ┆ eod  │\n",
+            "│            ┆          ┆        ┆         ┆   ┆         ┆              ┆ 14:19:00       ┆      │\n",
+            "│ 2025-01-06 ┆ 01:00:00 ┆ SX5E   ┆ 4893.32 ┆ … ┆ 4986.64 ┆ 2.62450529e8 ┆ 2026-02-03     ┆ eod  │\n",
+            "│            ┆          ┆        ┆         ┆   ┆         ┆              ┆ 14:19:00       ┆      │\n",
+            "│ 2025-01-07 ┆ 01:00:00 ┆ SX5E   ┆ 4987.38 ┆ … ┆ 5011.82 ┆ 2.71873242e8 ┆ 2026-02-03     ┆ eod  │\n",
+            "│            ┆          ┆        ┆         ┆   ┆         ┆              ┆ 14:19:00       ┆      │\n",
+            "│ 2025-01-08 ┆ 01:00:00 ┆ SX5E   ┆ 5013.34 ┆ … ┆ 4996.39 ┆ 2.57844275e8 ┆ 2026-02-03     ┆ eod  │\n",
+            "│            ┆          ┆        ┆         ┆   ┆         ┆              ┆ 14:19:00       ┆      │\n",
+            "└────────────┴──────────┴────────┴─────────┴───┴─────────┴──────────────┴────────────────┴──────┘\n"
           ]
         }
       ],
@@ -96,31 +101,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'c:\\\\dev\\\\quanto\\\\strategies\\\\example\\\\SX5E_2025-01-01_2025-12-31_1m.xlsx'"
+              "'c:\\\\Users\\\\S542279\\\\Desktop\\\\quanto\\\\strategies\\\\example\\\\SX5E_2025-01-01_2025-12-31_1m.xlsx'"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "feed.get_data_excel(start_date, end_date, '1m', universe)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "a"
       ]
     },
     {
@@ -165,7 +161,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "quantenv",
       "language": "python",
       "name": "python3"
     },
@@ -179,7 +175,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.7"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
